app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */

html, body { 
  margin: 0; 
  padding: 0; 
  height: 100%;
  width: 100%;
  /*font-family: 'Josefin Sans', sans-serif;*/
  font-family: 'Varela Round', sans-serif;
}

a:hover {
	-webkit-transition: all 0.4s ease;
	-moz-transition: all 0.4s ease;
	-o-transition: all 0.4s ease;
	transition: all 0.4s ease;
}

.navbar {
	color: white;
}

.navbar-brand {
	font-size: 25px;
	font-family: 'Poller One', cursive;
}

.nav_bird {
	width: 30px;
	height: auto;
	float: left;
	margin: -7px -4px 0px -3px;
	border-radius: 3px;
	-webkit-transition: all 0.4s ease;
	-moz-transition: all 0.4s ease;
	-o-transition: all 0.4s ease;
}

.nav_bird:hover {
	opacity: 0.5;
}

#map { 
	float: left;
  position: absolute;
  top: 50px; 
  bottom: 0; 
  width: 100%;
}

.main_container {
	position: fixed;
	padding-top: 50px;
	width: 100%;
	height: 100%;
}

.map_div {
	float: left;
	width: 65%;
	height: 100%;
	padding: 0;
}

.content_div {
	float: right;
	position: relative;
	background-color: rgba(0,0,0,0.8);
	color: #fff;
	font-size: 20px;
	padding: 0px 10px 30px 10px;
	width: 35%;
	height: 100%;
	border: 0;
}

#welcome {
	text-align: center;
	margin: 40px 10px 10px 10px;
	font-size: 22px;
}

.bird_on_it {
	width: 50%;
	height: auto;
	display: block;
  margin: 0 auto;
  padding: 0 0 15px 0;
  border-radius: 4px;
}

.content_header, .created_container_header {
	text-align: center;
	margin: 12px 5px 10px 20px;
}

#site-1 {
	color: #fff;
	height: 79%;
	width: 100%;
	margin: 5px;
	padding: 15px;
	overflow: scroll;
}

hr {
	margin: 15px 0 0 0;
}

.site1_title {
	font-size: 30px;
	letter-spacing: 8px;
}

.site1_desc {
	font-size: 22px;
	letter-spacing: 3px;
}

.about_modal, .howitworks_modal {
	cursor: pointer;
}

/*The form*/
#name {
	height: 30px;
}

#new_checkin input,
#new_checkin textarea {
	color: #000;
	font-size: 17px;
	width: 100%;
}

#submit_button {
	margin-top: 4px;
}

#new_checkin #checkin_photo {
	color: #FFF;
	font-size: 17px;
	width: 100%;
}

#entry_form {
	margin: 10px;
}

.addPhotoButton {
	width: 100%;
}
/*end form style*/

#back_button {
	display: none;
	top: 3000px;
	position: absolute;
}

.notice{
	color: red;
	font-size: 17px;
	text-align: center;
}

@media (max-width: 767px) {

	h2 {
		font-size: 24px;
	}

	#welcome {
		position: fixed;
		margin: 10px 10px 10px 10px;
		font-size: 15px;
	}

	.bird_on_it {
		width: 100px;
		height: auto;
		float: left;
	  margin: 25px 5px 15px 10px;
	}

	.nav_bird {
		/*margin: -7px -15px 0px -3px;*/
	}

	.the_guestbook, hr {
		display: none;
	}

	#site-1 {
		width: 100%;
		font-size: 20px;
	}

	.content_div {
		position: absolute;
		width: 100%;
		height: 30%;
		bottom: 0;
		padding: 0; 
		z-index: 1000;
	}

	.enbiggen {
		top: 50px;
		height: 100%;
	}

	#back_button {
		background-color: #16a085;
		color: #ecf0f1;
		font-size: 16px;
		display: block;
		margin: 0px 5px 0px 0px;
		float: right;
		top: -40px;
		position: relative;
	}

	#back_button:hover {
		background-color: #1abc9c;
	}

	#site-title {
		font-size: 20px;
	}

	.site1_title {
		font-size: 25px;	
	}

	.site1_desc {
		font-size: 20px;
	}

	.content_header, .created_container_header {
		text-align: left;
		/*margin: 12px 5px 10px 20px;*/
		margin: 50px 5px 10px 20px;
	}



}

